Bug 43793 - header/footer indicators: display problem in RTL interface
Summary: header/footer indicators: display problem in RTL interface
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta0
Hardware: Other All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: RTL
  Show dependency treegraph
 
Reported: 2011-12-13 06:30 UTC by Lior Kaplan
Modified: 2024-08-03 09:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
header marker in LTR interface (with options box) (64.75 KB, image/png)
2011-12-13 06:30 UTC, Lior Kaplan
Details
header marker in RTL interface (with options box) (65.59 KB, image/png)
2011-12-13 06:30 UTC, Lior Kaplan
Details
header marker in RTL interface (with options box) beta2 (60.97 KB, image/png)
2011-12-22 14:42 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lior Kaplan 2011-12-13 06:30:12 UTC
Created attachment 54394 [details]
header marker in LTR interface (with options box)

The header/footer markers appear in RTL interface as they do in the LTR interface instead of being mirrored ( = to the right side of the border between the header/footer and the document). Also notice the location of the downward arrow which is over the text, in stead of after the text more to the left.

The options box is also positioned as in the LTR interface, which in some cases can lead to the text being cut. 

Screenshots attahed.
Comment 1 Lior Kaplan 2011-12-13 06:30:48 UTC
Created attachment 54395 [details]
header marker in RTL interface (with options box)
Comment 2 Cédric Bosdonnat 2011-12-14 06:37:09 UTC
Lior,

I just built an Hebrew LibreOffice from master and could reproduce the text that goes under the arrow. That would be a problem with the size of the control. Could you give me some details how you got this one?

WRT the place of the arrow / plus, I'll hack that one.

Another question: what side should the whole label be? I though about placing it on the left side of the page... but that may not be correct for english documents. It would be cool if you could help answering the corresponding Opened Point on that page:
http://wiki.documentfoundation.org/Design/Whiteboard/Writer_SpecialIndicators#Open_Points
Comment 4 Lior Kaplan 2011-12-14 11:23:56 UTC
Regarding the "other question" - the location of the button should be related to the language the document is written in. E.g. - I can have a Hebrew document in English interface or or an English document with an RTL interface.

Although it's possible to set the location of the marker according to the page directionality, I would use the interface directionality for that. So an LTR interface would have the marker on the right, and RTL interface would have the marker on the left.
Comment 5 Lior Kaplan 2011-12-22 14:41:57 UTC
Verified the fix in beta2, thanks.

We still have a problem with the location of the down arrow which is still over the text. I guess the box width should be different depending on the translation itself.

Any idea why we use the header (default) string? I didn't find anyway to use any other header option. Maybe we could drop the "(default)" which would workaround the space problem for now?
Comment 6 Lior Kaplan 2011-12-22 14:42:45 UTC
Created attachment 54726 [details]
header marker in RTL interface (with options box) beta2
Comment 7 Cédric Bosdonnat 2011-12-23 00:44:43 UTC
(In reply to comment #5) 
> We still have a problem with the location of the down arrow which is still over
> the text. I guess the box width should be different depending on the
> translation itself.

I can't reproduce that part of the bug at all here... the box is properly sized here. The size of the box is computed using the size of the text. Are you using some special font for your applications on your system? Is there anything that could help me reproduce that?

> Any idea why we use the header (default) string? I didn't find anyway to use
> any other header option. Maybe we could drop the "(default)" which would
> workaround the space problem for now?

Between the parentheses is show the page style... change the page style and it should change. That information is precious to users and should be kept.
Comment 8 Lior Kaplan 2011-12-24 12:55:07 UTC
>> We still have a problem with the location of the down arrow which is still 
>> over the text. I guess the box width should be different depending on the
>> translation itself.
>
> I can't reproduce that part of the bug at all here... the box is properly sized
> here. The size of the box is computed using the size of the text. Are you using
> some special font for your applications on your system? Is there anything that
> could help me reproduce that?

I'm on a Debian machine, Hebrew fonts comes from the culmus fonts package. The screenshot is an empty (or maybe a blank line) document - nothing special.
Comment 9 Lior Kaplan 2011-12-25 10:05:24 UTC
> I'm on a Debian machine, Hebrew fonts comes from the culmus fonts package. The
> screenshot is an empty (or maybe a blank line) document - nothing special.

Looks OK on the same build on Ubuntu 10.04 and on Windows. So lets drop this issue for the time being. Can't really understand what's the difference.