Header/Footer: RTL display fixes (fdo#43793)